// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CheckBox should render an empty box 1`] = `
<span
  className="icon fa-square-o"
>
   
</span>
`;

exports[`Component: CheckBox should render ticked box 1`] = `
<span
  className="icon fa-check-square-o"
>
   
</span>
`;

exports[`Component: CheckBox should render without props 1`] = `
<span
  className="icon fa-square-o"
>
   
</span>
`;
